--- a/package.json
+++ b/package.json
@@ -27,26 +27,26 @@
     "url": "git://github.com/bolt/four.git"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.4.3",
-    "@vue/cli-service": "^3.6.0",
+    "@babel/polyfill": "^7.4.4",
+    "@vue/cli-service": "^3.7.0",
     "axios": "^0.18.0",
     "baguettebox.js": "^1.11.0",
     "bootstrap": "^4.3.1",
-    "codemirror": "^5.45.0",
+    "codemirror": "^5.46.0",
     "flagpack": "^1.0.3",
-    "jquery": "^3.4.0",
-    "moment": "^2.24.0",
+    "jquery": "^3.4.1",
+    "luxon": "^1.13.0",
     "no-scroll": "^2.1.1",
     "popper.js": "^1.15.0",
     "register-service-worker": "^1.6.2",
     "simplemde": "^1.11.2",
     "stylelint-config-recommended-scss": "^3.3.0",
-    "stylelint-scss": "^3.6.0",
+    "stylelint-scss": "^3.6.1",
     "terser": "^3.17.0",
     "tinycolor2": "^1.4.1",
     "vue": "^2.6.10",
     "vue-flatpickr-component": "^8.1.2",
-    "vue-multiselect": "^2.1.4",
+    "vue-multiselect": "^2.1.6",
     "vue-notification": "^1.3.16",
     "vue-simplemde": "^0.5.1",
     "vue-trumbowyg": "^3.4.2",
@@ -54,26 +54,26 @@
     "vuex": "^3.1.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.3",
-    "@babel/plugin-transform-regenerator": "^7.4.3",
-    "@babel/plugin-transform-runtime": "^7.4.3",
-    "@babel/polyfill": "^7.4.3",
-    "@babel/preset-env": "^7.4.3",
+    "@babel/core": "^7.4.4",
+    "@babel/plugin-transform-regenerator": "^7.4.4",
+    "@babel/plugin-transform-runtime": "^7.4.4",
+    "@babel/polyfill": "^7.4.4",
+    "@babel/preset-env": "^7.4.4",
     "@symfony/webpack-encore": "^0.27.0",
     "@vue/test-utils": "^1.0.0-beta.29",
     "ajv-keywords": "^3.4.0",
     "autoprefixer": "^9.5.1",
     "babel-core": "^7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^24.7.1",
+    "babel-jest": "^24.8.0",
     "eslint": "^5.16.0",
-    "eslint-config-prettier": "^4.1.0",
+    "eslint-config-prettier": "^4.2.0",
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-standard": "^4.0.0",
     "eslint-plugin-vue": "^5.2.2",
-    "jest": "^24.7.1",
+    "jest": "^24.8.0",
     "jest-serializer-vue": "^2.0.2",
-    "node-sass": "^4.11.0",
+    "node-sass": "^4.12.0",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.6.0",
     "prettier": "^1.17.0",
@@ -86,7 +86,7 @@
     "vue-router": "^3.0.6",
     "vue-template-compiler": "^2.6.10",
     "webpackbar": "^3.2.0",
-    "workbox-webpack-plugin": "^4.3.0"
+    "workbox-webpack-plugin": "^4.3.1"
   },
   "scripts": {
     "start": "encore dev-server --port=8234 --progress --disable-host-check --verbose",
