--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,11 @@
         "ext-pdo": "*",
         "api-platform/core": "^2.4",
         "bolt/common": "^2.0.2",
-        "cocur/slugify": "^3.1",
-        "doctrine/annotations": "^1.0",
-        "doctrine/doctrine-bundle": "^1.8",
+        "cocur/slugify": "^3.2",
+        "doctrine/annotations": "^1.6",
+        "doctrine/doctrine-bundle": "^1.11",
         "doctrine/doctrine-cache-bundle": "^1.3.1",
-        "doctrine/orm": "^2.5.11",
+        "doctrine/orm": "^2.6",
         "easycorp/easy-log-handler": "^1.0.7",
         "embed/embed": "^3.3",
         "erusev/parsedown": "^1.7",
@@ -22,37 +22,37 @@
         "fzaninotto/faker": "^1.8",
         "gedmo/doctrine-extensions": "v2.4.x-dev",
         "guzzlehttp/guzzle": "^6.3",
-        "knplabs/knp-menu-bundle": "^2.0",
+        "knplabs/knp-menu-bundle": "^2.2",
         "league/glide-symfony": "^1.0",
         "miljar/php-exif": "^0.6.4",
         "nelmio/cors-bundle": "^1.5",
-        "nesbot/carbon": "^1.34",
+        "nesbot/carbon": "^1.37",
         "php-translation/symfony-bundle": "^0.8",
-        "phpdocumentor/reflection-docblock": "^4.2",
-        "sensio/framework-extra-bundle": "^5.1",
+        "phpdocumentor/reflection-docblock": "^4.3",
+        "sensio/framework-extra-bundle": "^5.3",
         "sensiolabs/security-checker": "^5.0",
         "siriusphp/upload": "^2.1",
         "stof/doctrine-extensions-bundle": "^1.3",
-        "symfony/asset": "^4.2",
-        "symfony/console": "^4.2",
-        "symfony/dependency-injection": "^4.2",
-        "symfony/expression-language": "^4.2",
+        "symfony/asset": "^4.3",
+        "symfony/console": "^4.3",
+        "symfony/dependency-injection": "^4.3",
+        "symfony/expression-language": "^4.3",
         "symfony/flex": "^1.2",
-        "symfony/form": "^4.2",
-        "symfony/framework-bundle": "^4.2",
-        "symfony/monolog-bridge": "^4.1",
+        "symfony/form": "^4.3",
+        "symfony/framework-bundle": "^4.3",
+        "symfony/monolog-bridge": "^4.3",
         "symfony/monolog-bundle": "^3.3",
-        "symfony/polyfill-php72": "^1.8",
-        "symfony/security-bundle": "^4.2",
-        "symfony/serializer": "^4.2",
+        "symfony/polyfill-php72": "^1.11",
+        "symfony/security-bundle": "^4.3",
+        "symfony/serializer": "^4.3",
         "symfony/swiftmailer-bundle": "^3.2",
-        "symfony/translation": "^4.2",
-        "symfony/twig-bundle": "^4.2",
-        "symfony/validator": "^4.2",
-        "symfony/var-dumper": "^4.2",
-        "symfony/webpack-encore-bundle": "^1.0",
-        "symfony/yaml": "^4.2",
-        "tightenco/collect": "^5.7",
+        "symfony/translation": "^4.3",
+        "symfony/twig-bundle": "^4.3",
+        "symfony/validator": "^4.3",
+        "symfony/var-dumper": "^4.3",
+        "symfony/webpack-encore-bundle": "^1.6",
+        "symfony/yaml": "^4.3",
+        "tightenco/collect": "^5.8",
         "twig/extensions": "^1.5",
         "webmozart/path-util": "^2.3",
         "webonyx/graphql-php": "^0.13",
@@ -69,7 +69,7 @@
         "behat/mink-extension": "^2.3",
         "behat/mink-goutte-driver": "^1.2",
         "behatch/contexts": "^3.2",
-        "coduo/php-matcher": "dev-patch-2@dev",
+        "coduo/php-matcher": "^3.1.2",
         "dama/doctrine-test-bundle": "^5.0",
         "doctrine/doctrine-fixtures-bundle": "^3.1",
         "lakion/mink-debug-extension": "^1.2",
@@ -82,14 +82,14 @@
         "phpstan/phpstan-symfony": "^0.11",
         "phpunit/phpunit": "^7.0",
         "roave/security-advisories": "dev-master@dev",
-        "symfony/browser-kit": "^4.2",
-        "symfony/css-selector": "^4.2",
-        "symfony/debug-bundle": "^4.2",
-        "symfony/dotenv": "^4.2",
+        "symfony/browser-kit": "^4.3",
+        "symfony/css-selector": "^4.3",
+        "symfony/debug-bundle": "^4.3",
+        "symfony/dotenv": "^4.3",
         "symfony/maker-bundle": "^1.11",
-        "symfony/stopwatch": "^4.2",
-        "symfony/web-profiler-bundle": "^4.2",
-        "symfony/web-server-bundle": "^4.2",
+        "symfony/stopwatch": "^4.3",
+        "symfony/web-profiler-bundle": "^4.3",
+        "symfony/web-server-bundle": "^4.3",
         "symplify/easy-coding-standard": "^5.4.14"
     },
     "config": {
@@ -104,7 +104,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": true,
-            "require": "^4.2"
+            "require": "^4.3"
         }
     },
     "autoload": {
@@ -126,11 +126,6 @@
         {
             "type": "vcs",
             "url": "https://github.com/bobdenotter/DoctrineExtensions",
-            "no-api": true
-        },
-        {
-            "type": "vcs",
-            "url": "https://github.com/jarjak/php-matcher",
             "no-api": true
         }
     ],
